--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/pt-sans": "^4.2.1",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-ffmpeg": "^0.3.1",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.1",
@@ -25,11 +26,14 @@
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-ffmpeg": "^0.3.8",
     "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-video": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-modal": "^3.12.1"
+    "react-modal": "^3.12.1",
+    "react-player": "^2.9.0"
   }
 }
