--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource/pt-sans": "^4.2.1",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-ffmpeg": "^0.3.1",
@@ -30,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.12.0",
     "gatsby-video": "^0.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
