--- a/package.json
+++ b/package.json
@@ -15,29 +15,26 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@fontsource/pt-sans": "^4.2.2",
-    "bootstrap": "^4.6.0",
-    "gatsby": "^2.32.3",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-ffmpeg": "^0.3.1",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-ffmpeg": "^0.3.8",
-    "gatsby-transformer-sharp": "^2.12.1",
-    "gatsby-video": "^0.2.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^16.13.1",
+    "@fontsource/pt-sans": "^4.3.0",
+    "gatsby-image": "^3.5.0",
+    "gatsby-plugin-google-analytics": "^3.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-sitemap": "^4.1.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-sharp": "^3.5.0",
+    "graphql": "^15.5.0",
+    "postcss": "^8.2.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.2.1",
+    "react-hook-form": "^7.6.0",
     "react-icons": "^4.2.0",
-    "react-modal": "^3.13.1",
-    "react-player": "^2.9.0",
-    "reactstrap": "^8.9.0"
+    "react-player": "^2.9.0"
+  },
+  "devDependencies": {
+    "gatsby": "^3.5.0"
   }
 }
