--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "postinstall": "netlify-lambda install"
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "@fontsource/pt-sans": "^4.3.0",
@@ -27,7 +26,6 @@
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-transformer-sharp": "^3.5.0",
     "graphql": "^15.5.0",
-    "netlify-lambda": "^2.0.8",
     "postcss": "^8.2.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
